--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "production-build",
-  "homepage": "https://raveenakholia.github.io/production-build",
+  "homepage": "https://raveenakholia.vercel.app/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
